- massive change ( validate errors warrings from desktop-file-validate)   - sed -i 's,Encoding=UTF-8,,g' *.desktop   - sed -i "s,.png,,1" `grep -l 'Icon=[^/].*\.png' *.desktop`   - sed -i "s,MimeType=.*,\0;,g" `grep "MimeType.*semicolon" validate |awk '{print $1}' |tr ":" " "`   - sed -i 's,MapNotify=.*,,g' *.desktop   - sed -i '/^$/d' *.desktop - not all error/warrings validated
Changed files:
    forcefield.desktop -> 1.2

--- a/forcefield.desktop
+++ b/forcefield.desktop
@@ -5,8 +5,7 @@ Comment=TrueCrypt frontend for GNOME
 Comment[pl]=GNOME-owe GUI dla TrueCrypta
 Exec=forcefield
 Terminal=false
-Icon=forcefield.png
+Icon=forcefield
 Type=Application
-Encoding=UTF-8
 X-KDE-StartupNotify=false
 Categories=GNOME;Application;System;
