- removed invalid Application category
Changed files:
    forcefield.desktop -> 1.3

--- a/forcefield.desktop
+++ b/forcefield.desktop
@@ -8,4 +8,4 @@ Terminal=false
 Icon=forcefield
 Type=Application
 X-KDE-StartupNotify=false
-Categories=GNOME;Application;System;
+Categories=GNOME;System;
